--- a/_posts/2018-01-26-再谈比特币.markdown
+++ b/_posts/2018-01-26-再谈比特币.markdown
@@ -4,20 +4,22 @@ title:  "再谈比特币"
 date:   2018-01-26 22:06:00
 categories: 区块链
 ---
-
 ## 再谈比特币
 ***
 
-虽然已经普及过很多次了，但是我觉得还是有必要再写一写比特币。比特币是第一个区块链技术应用，而且是现在矿工最多，算力资源最丰富的应用了。比特币创造的目的其实非常明确，就是要创造一种总量有限，去中心化的虚拟电子货币体系。在某种意义上讲，这个目标是部分实现了。同时比特币展示出了一种非常有价值的区块链技术，其运行完全不需要任何第三方的中心化的机构或者个人进行管理和维护。
+虽然已经普及过很多次了，但是我觉得还是有必要再写一写比特币。比特币是第一个区块链技术应用，而且是现在矿工最多，算力资源最丰富的应用了。比特币的目的其实非常明确，就是要创造一种总量有限，去中心化的虚拟电子货币体系。在某种意义上讲，这个目标是部分实现了。同时比特币展示出了一种非常有价值的区块链技术，其运行完全不需要任何第三方的中心化的机构或者个人进行管理和维护。
 
-人类的非理性是经济波动的重大诱因，中心化的货币发行体制有很大的**弊端**.1971年8月15日，美国宣布放弃金本位制度，以美国的一国主权信用保证的国际货币体系宣告破产。而国家中央银行的有效性，其实也是值得怀疑的。而经济的周期波动很大程度上是因为信贷和商品增长之间不匹配，整个社会的货币和信贷的总量通常很难准确把握和衡量，作为调节经济活动的中央银行往往并不能有效地应对经济变化。 通胀和紧缩总是周期性地出现，而一种去中心化的国际性货币也许会成为一个非常好的国际标准交易的货币单位，对于防止货币超发有非常好的抑制作用。事实证明通过一国的主权担保的国际货币体系是不可能长久的，而如果以比特币为代表的电子货币能够完成世界通用等价体系的构建那真的将会是一个非常了不起的成就。尽管对比特币的期望巨大，但是前景却并不乐观。首先对于各国政府的压制和怀疑先按下不表。我们先来看看比特币自身的技术性问题，和比特币社区过度的分散和“民主化”造成的问题。
+人类的非理性是经济波动的重大诱因，中心化的货币发行体制又有很大的**弊端**.1971年8月15日，美国宣布放弃金本位制度，以美国的一国主权信用保证的国际货币体系宣告破产。另一方面，国家中央银行的有效性，其实也是值得怀疑的。经济的周期波动很大程度上是因为信贷和商品增长之间不匹配，整个社会的货币和信贷的总量通常很难准确把握和衡量，作为调节经济活动的中央银行往往并不能有效地应对经济变化。 通胀和紧缩总是周期性地出现，而一种去中心化的国际性货币也许会成为一个非常好的国际标准交易的货币单位，对于防止货币超发有非常好的抑制作用。事实证明通过一国的主权担保的国际货币体系是不可能长久的，而如果以比特币为代表的电子货币能够完成世界通用等价体系的构建那真的将会是一个非常了不起的成就。尽管对比特币的期望巨大，但是前景却并不乐观。首先对于各国政府的压制和怀疑先按下不表。我们先来看看比特币自身的技术性问题，和比特币社区过度的分散和“民主化”造成的问题。
 
 我们知道最早中本聪设定的比特币规则是每十分钟挖出一个块，每个块的大小1M。在2008年或者2009年的时候，我觉得这样的设定应该是经过仔细考虑的，而且鉴于当时互联网连接速度的限制，这样的设定也是合理的，但是造成了两个很严重的问题：
 - 由于每个块的容量限制，所以能够记录的交易总量有限。使得比特币体系能够支撑的单位时间交易量非常有限，现在平均来看每秒只能记录7条交易。
 - 10分钟出一个新块的设定使得交易确认时间很长，而且为了确保交易成功，还要等待一个小时左右。
 以上两个问题使得现在比特币交易的确认时间越来越长，而交易的手续费也越来越高，现在矿工记账的策略通常都是大额交易，高手续费交易优先。对于小额交易或较低手续费的交易，往往等待很长时间都无法被记录。随着比特币价格的上涨，平均每笔交易的手续费已经相当高昂。对于比特币扩容的呼声越来越高，而且拖得越久对比特币本身的发展将更为不利。
 
-去年8月份，比特币的一个重大事件就是出现了一次硬分叉（非官方分叉），新的分叉叫做比特现金（Bitcoin Cash-BCH），其目的是为了进行扩容（扩到8M）。关于比特币的扩容问题，整个社区激烈争论了很长时间。最终在去年早些时候，社区决定进行SegWit1x和SegWit2x硬分叉，把区块扩容为两倍到2M，这次硬分叉本来是准备放在2018年11月16日，结果由于比特币社区的巨大分歧而被临时取消，比特币的扩容问题至今还是没有解决。关于扩容，这其实涉及到矿工的利益问题，作为矿工来说，除了挖出每个区块获得25个比特币的奖励外，收取交易记账费用也是一块重要收入（现在大约占3%的收入），如果扩容实现，那么块容量资源将不会显得稀缺，手续费的收入必将减少。另一方面，由于算力决定挖出新块的能力高低，那谁拥有更多的算力，谁在比特币体系中的地位就越高，任何要改变主链规则的变更都需要绝大多数矿工的配合才能成功，即产生合法的硬分叉。而8月1日的新分叉，其实是ViaBTC这个第三大矿池做出的一次“叛变”举动。这次分叉出来的新链没有被整个比特币社区承认，并迅速被多数矿工的算力消灭掉。最后ViaBTC提供算力把这个分叉继续保留下来，使其变成了一个非官方的竞争币——比特现金。
+去年8月份，比特币的一个重大事件就是出现了一次硬分叉（非官方分叉），新的分叉叫做比特现金（Bitcoin Cash-BCH），其目的是为了进行扩容（扩到8M）。关于比特币的扩容问题，整个社区激烈争论了很长时间。最终在去年早些时候，社区决定进行SegWit1x和SegWit2x硬分叉，把区块容量扩容为两倍达到到2M，这次硬分叉本来是准备放在2017年11月16日，结果由于比特币社区的巨大分歧而被临时取消，比特币的扩容问题至今还是没有解决。关于扩容，这其实涉及到矿工的利益问题，作为矿工来说，除了挖出每个区块获得25个比特币的奖励外，收取交易记账费用也是一块重要收入（现在大约占3%的收入），如果扩容实现，那么块容量资源将不会显得稀缺，手续费的收入必将减少。另一方面，任何要改变主链规则的变更都需要绝大多数矿工的配合才能成功，即产生合法的硬分叉需要全网50%以上的比特币矿工配合才能够完成。而8月1日的新分叉，其实是ViaBTC这个第三大矿池做出的一次“叛变”举动。这次分叉出来的新链没有被整个比特币社区承认，并迅速被多数矿工的算力消灭掉。最后ViaBTC提供算力把这个分叉继续保留下来，使其变成了一个非官方的竞争币——比特现金。
 
-作为一个区块链的资深爱好者，我觉得大家应该多了解一下以太坊，EOS等新的区块链技术平台。
-以太坊的智能合约其实是一个更加有意思的东西，在相当长的一段时间里，大多数人对区块链应用的认识还只是停留在电子加密货币上面。以太坊的推出，绝对是对区块链生态的一个巨大贡献，创始人是一个长相奇特的俄罗斯男孩，名叫*Vitalik Buterin*.以太坊引入了智能合约这样一个新的概念。在以太坊的用户不仅仅只能做货币的交易，而且还可以发出一个智能合约，然后用代码规定合约的内容，由于区块链技术的可追溯性和不可篡改性，这样的智能合约不需要第三方的公正既可以成立并严格执行。
+还有一个问题其实涉及到去中心化本身。由于算力决定挖出新块的能力高低，那谁拥有更多的算力，谁在比特币体系中的地位就越高。说以比特币实际上是被几个大矿池给垄断了，如果时间排名前几位的矿池联合起来，完全可以左右比特币的记账，甚至可以成功伪造交易（算力超过50%即可）。所以比特币的利益被大矿池们获取，而比特币世界的话语权，其实也是被少数矿池控制了。这和当初的去中性化的想法背道而驰。
+
+本文想要表述的观点其实就是指出特币体系当前的一些问题。比特币是否能够成为区块链大生态中的一般等价物，还是有很多不确定性的。但是无论如何还是希望其能够完善，能够真正担当起区块链生态中的主货币的重任。
+
+另外，作为一个区块链的资深爱好者，我觉得大家应该多了解一下以太坊，EOS等新的区块链技术平台。后面会写一个专题来介绍。
